<resources>
    <string name="app_name">Sera Amm</string>
    <string name="chooser_title">Choose From Below!</string>
    <string name="chat">চ্যাট</string>
    <string name="cart">ঝুড়ি</string>
    <string name="aam">হোম</string>
    <string name="amm_pakar_anumanik_somoy">আম পাকার আনুমানিক সময়</string>
    <string name="poroborti_amm_guli">পরবর্তি আমগুলো</string>
    <string name="je_amm_gulo_bajare_ache">যে আম গুলো বাজারে আছে</string>
    <string name="sera_amm">সেরা আম</string>
    <string name="apnar_tottho_din">আপনার তথ্য দিন</string>
    <string name="name">নাম</string>
    <string name="ex_fahim_fahad_leon">Ex:Fahim Fahad Leon</string>
    <string name="phone_number">ফোন নম্বর</string>
    <string name="ex_01xxxxxxxxx">Ex:01xxxxxxxxx</string>
    <string name="address">ঠিকানা</string>
    <string name="random_address">Ex:279/kha,Moddhopirerbak/Mirpur,Dhaka</string>
    <string name="apnar_order_niscit_korun">আপনার অর্ডার নিশ্চিত করুন</string>
    <string name="orderer_biboron">অর্ডারের বিবরন</string>
    <string name="sera_aam_theke_aam_kenar_jonno_dhonnobad">সেরা আম থেকে আম কেনার জন্য আপনাকে ধন্যবাদ</string>
    <string name="order_no">অর্ডার নম্বরঃ</string>
    <string name="large_string_dhonnobad">আপনার অর্ডারটি আমাদের প্রতিনিধির কাছে পাঠানো হয়েছে। দয়া করে অপেক্ষা করুন। আপনার অর্ডারটি নিশ্চিত করতে আমাদের বিক্রয় প্রতিনিধি আপনাকে কল করবে।</string>
    <string name="thank_you">ধন্যবাদ</string>
    <string name="string_phone_number">অথবা কল করুন +৮৮০১৮৪৭১৫০৭২৪ নম্বরে।</string>
    <string name="large_string_sorry">এই মুহুর্তে আপনার অর্ডারটি প্রসেস করা সম্ভব হচ্ছে না। দয়া করে একটু পরে আবার চেষ্টা করুন।</string>
    <string name="sorry">দুঃখিত</string>
    <string name="gopalvog">গোপাল ভোগ</string>
    <string name="mey_20">২০ মে</string>
    <string name="july_1">১ জুলাই</string>
    <string name="assina">আশ্বিনা</string>
    <string name="jun_16">১৬ জুন</string>
    <string name="fojli">ফজলি</string>
    <string name="amrupali">আম্রুপালি</string>
    <string name="jun_10">১০ জুন</string>
    <string name="lokhna">লখনা/লক্ষন ভোগ</string>
    <string name="jun_6">৬ জুন</string>
    <string name="langra">ল্যাংড়া</string>
    <string name="mey_28">২৮ মে</string>
    <string name="himsagor">হিমসাগর/ক্ষীরশাপথ</string>
    <string name="mey_25">২৫ মে</string>
    <string name="rani_pochondo">রানি পছন্দ</string>
    <string name="date">তারিখ</string>
    <string name="amm_pakar_anumanik_tarikh">আমগুলো পাকার আনুমানিক তারিখ</string>
    <string name="orderer_niom">অর্ডারের নিয়মাবলী</string>
    <string name="add_to_list">লিস্টে যোগ করুন</string>
    <string name="poriman">পরিমান</string>
    <string name="porman">পরিমান</string>
    <string name="kuriyar_free">(কুরিয়ার ফ্রি)</string>
    <string name="read_more">আরো পড়ুন...</string>
    <string name="rating">রেটিংঃ</string>
    <string name="je_aam_gulo_bajare_ache">যে আমগুলো বাজারে আছে</string>
    <string name="next_mangoes">পরবর্তী আমগুলো</string>
</resources>
