<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/commonpagebg"
    tools:context=".DateOfRipe">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="1dp"
        android:layout_marginBottom="8dp"
        card_view:cardElevation="1dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/dateofripebackbutton"
                    android:src="@drawable/baseline_arrow_back_black_48dp"
                    android:layout_width="24dp"
                    android:layout_gravity="center"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_siliguri"
                    android:text="@string/amm_pakar_anumanik_tarikh"
                    android:textColor="@color/font"
                    android:padding="8dp"
                    android:textSize="@dimen/header" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>



    </android.support.v7.widget.CardView>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/black">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/aam"
                    android:padding="2dp"
                    android:background="@color/font"
                    android:textColor="#fff"
                    android:textSize="@dimen/name"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/font"
                    android:padding="2dp"

                    android:text="@string/date"
                    android:textColor="#fff"
                    android:textSize="@dimen/name"
                    android:textStyle="bold" />

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/gopalvog"
                    android:padding="2dp"
                    android:background="#fff"
                    android:textSize="@dimen/price"
                    android:textColor="@color/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="#fff"
                    android:padding="2dp"
                    android:textSize="@dimen/price"
                    android:text="@string/mey_20"
                    android:textColor="@color/font" />

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:textSize="@dimen/price"
                    android:gravity="center"
                    android:background="#fff"
                    android:text="@string/rani_pochondo"
                    android:textColor="@color/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="2dp"
                    android:background="#fff"
                    android:text="@string/mey_25"
                    android:textSize="@dimen/price"
                    android:textColor="@color/font" />


            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/price"
                    android:padding="2dp"
                    android:background="#fff"
                    android:gravity="center"
                    android:text="@string/himsagor"
                    android:textColor="@color/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="#fff"
                    android:text="@string/mey_28"
                    android:padding="2dp"
                    android:textSize="@dimen/price"
                    android:textColor="@color/font" />


            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:padding="2dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:textSize="@dimen/price"
                    android:gravity="center"
                    android:text="@string/langra"
                    android:textColor="@color/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:gravity="center"
                    android:background="#fff"
                    android:text="@string/jun_6"
                    android:textSize="@dimen/price"
                    android:textColor="@color/font" />


            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/price"
                    android:padding="2dp"
                    android:background="#fff"
                    android:gravity="center"
                    android:text="@string/lokhna"
                    android:textColor="@color/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="#fff"
                    android:text="@string/jun_10"
                    android:padding="2dp"
                    android:textSize="@dimen/price"
                    android:textColor="@color/font" />


            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:padding="2dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:textSize="@dimen/price"
                    android:gravity="center"
                    android:text="@string/amrupali"
                    android:textColor="@color/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:gravity="center"
                    android:background="#fff"
                    android:text="@string/jun_16"
                    android:textSize="@dimen/price"
                    android:textColor="@color/font" />


            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:padding="2dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:textSize="@dimen/price"
                    android:gravity="center"
                    android:text="@string/fojli"
                    android:textColor="@color/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:gravity="center"
                    android:background="#fff"
                    android:text="@string/jun_16"
                    android:textSize="@dimen/price"
                    android:textColor="@color/font" />


            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:padding="2dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:textSize="@dimen/price"
                    android:gravity="center"
                    android:text="@string/assina"
                    android:textColor="@color/font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin=".5dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:gravity="center"
                    android:background="#fff"
                    android:text="@string/july_1"
                    android:textSize="@dimen/price"
                    android:textColor="@color/font" />


            </TableRow>
        </TableLayout>
    </ScrollView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="1dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ammbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/aam"
                    android:textSize="@dimen/name"
                    android:fontFamily="@font/hind_siliguri"
                    android:textColor="@color/font"
                    />


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


                <Button
                    android:id="@+id/chart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/cart"
                    android:textSize="@dimen/name"
                    android:fontFamily="@font/hind_siliguri"
                    android:textColor="@color/font"
                    />


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


                <Button
                    android:id="@+id/chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/chat"
                    android:textSize="@dimen/name"
                    android:fontFamily="@font/hind_siliguri"
                    android:textColor="@color/font"
                    />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>




    </android.support.v7.widget.CardView>

</LinearLayout>