<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Information">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="1dp"
        android:layout_marginBottom="8dp"
        card_view:cardElevation="1dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/informationbackbutton"
                    android:src="@drawable/baseline_arrow_back_black_48dp"
                    android:layout_width="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_height="24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_siliguri"
                    android:text="@string/apnar_tottho_din"
                    android:textColor="@color/font"
                    android:padding="8dp"
                    android:textSize="@dimen/header" />
            </LinearLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                android:textColor="@color/font"
                android:textSize="@dimen/name" />


            <EditText
                android:id="@+id/informationname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_fahim_fahad_leon"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font"
                android:textSize="@dimen/name"
                android:text="@string/phone_number"
                android:layout_marginStart="16dp"/>

            <EditText
                android:id="@+id/informationphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_01xxxxxxxxx"
                android:inputType="phone"
                android:layout_margin="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font"
                android:textSize="@dimen/name"
                android:text="@string/address"
                android:layout_marginStart="16dp"/>

            <EditText
                android:id="@+id/informationaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/random_address"
                android:layout_margin="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="text"
                tools:ignore="Autofill" />


            <Button
                android:id="@+id/informationsubmit"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbackground"
                android:text="@string/apnar_order_niscit_korun"
                android:layout_margin="8dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textSize="@dimen/name"
                android:textColor="#fff"
                />


        </LinearLayout>
    </ScrollView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="1dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ammbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/aam"
                    android:textSize="@dimen/name"
                    android:fontFamily="@font/hind_siliguri"
                    android:textColor="@color/font"
                    />


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


                <Button
                    android:id="@+id/chart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/cart"
                    android:textSize="@dimen/name"
                    android:fontFamily="@font/hind_siliguri"
                    android:textColor="@color/font"
                    />


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


                <Button
                    android:id="@+id/chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/chat"
                    android:textSize="@dimen/name"
                    android:fontFamily="@font/hind_siliguri"
                    android:textColor="@color/font"
                    />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>




    </android.support.v7.widget.CardView>


</LinearLayout>